Add marketing content and project documentation
- Add Vision section with Contextual/Ephemeral/Composable messaging
- Update "How It Works" copy for clarity
- Add CHANGELOG.md, CONTRIBUTING.md, LICENSE
- Update README.md with comprehensive documentation
- Various package.json and config updates

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tpitre/a2ui-bridge.git"
+    "url": "https://github.com/southleft/a2ui-bridge.git"
   },
   "scripts": {
     "build": "turbo run build",
