--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,7 +29,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tpitre/a2ui-bridge.git",
+    "url": "https://github.com/southleft/a2ui-bridge.git",
     "directory": "packages/core"
   },
   "keywords": [
