--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "turbo": "^2.3.3",
     "typescript": "^5.7.2"
   },
+  "peerDependencies": {
+    "hono": "^4"
+  },
   "packageManager": "pnpm@9.15.1",
   "engines": {
-    "node": ">=18"
+    "node": ">=22"
   }
 }
